// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverDemo Show Popover bottom-center: visible = false 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank eui-wingblank-m"
    >
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
      <div
        class="eui-whitespace eui-whitespace-xl"
      />
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`PopoverDemo Show Popover bottom-center: visible = true 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank eui-wingblank-m"
    >
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
      <div
        class="eui-whitespace eui-whitespace-xl"
      />
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
    </div>
  </div>
  <div
    class="eui-cover eui-cover-transparent eui-fade-entry-done eui-fade"
  />
  <div
    class="eui-popover eui-fade-entry-done eui-fade"
  >
    <div
      class="eui-popover-wrap"
      style="top: 4px; left: 0px; transform-origin: 0px 0 0;"
    >
      <div
        class="eui-popover-content"
      >
        <div
          class="eui-popover-arrow eui-popover-arrow-bottom"
        />
        <div
          class="eui-popover-inner"
        >
          <div
            class="eui-popover-inner-wrapper"
          >
            <p
              style="margin: 10px 20px;"
            >
              red
            </p>
            <p
              style="margin: 10px 20px;"
            >
              yellow
            </p>
            <p
              style="margin: 10px 20px;"
            >
              blue
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PopoverDemo Show Popover top-center: visible = false 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank eui-wingblank-m"
    >
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
      <div
        class="eui-whitespace eui-whitespace-xl"
      />
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`PopoverDemo Show Popover top-center: visible = true 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank eui-wingblank-m"
    >
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
      <div
        class="eui-whitespace eui-whitespace-xl"
      />
      <div>
        <button
          class="eui-button eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          Popover
        </button>
      </div>
    </div>
  </div>
  <div
    class="eui-cover eui-cover-transparent eui-fade-entry-done eui-fade"
  />
  <div
    class="eui-popover eui-fade-entry-done eui-fade"
  >
    <div
      class="eui-popover-wrap"
      style="top: -4px; left: 0px; transform-origin: 0px 0 0;"
    >
      <div
        class="eui-popover-content"
      >
        
        <div
          class="eui-popover-inner"
        >
          <div
            class="eui-popover-inner-wrapper"
          >
            <p
              style="margin: 10px 20px;"
            >
              red
            </p>
            <p
              style="margin: 10px 20px;"
            >
              yellow
            </p>
            <p
              style="margin: 10px 20px;"
            >
              blue
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Popover correctly 1`] = `
<div>
  <div
    class="eui-wingblank eui-wingblank-m"
  >
    <div>
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        Popover
      </button>
    </div>
    <div
      class="eui-whitespace eui-whitespace-xl"
    />
    <div>
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        Popover
      </button>
    </div>
  </div>
</div>
`;
